# run-run-rest

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  GEMINI.md  README.md  SYSTEM_PROMPT-v1.md  SYSTEM_PROMPT-v2.md  SYSTEM_PROMPT-v3.md  SYSTEM_PROMPT.md  agent_tools.py  conftest.py  dependencies.py  logger.py  main.py  personas.py  pyproject.toml  save_tokens.py  storage.py  test_db_query.py
.github/workflows/: deploy.yml
docs/ADR/: 0001-use-standard-dockerfile.md  001-authlib-zitadel.md  002-bff-session-cookie-pivot.md  003-session-cookie-same-site-lax.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.spec.js  App.vue
personas/: SUPPORTIVE_REALIST.md  cheering-coach.md  supportive-motivator.md
routers/: auth.py  chat.py  webhook.py
scripts/: backfill_strava.py
src/: main.py
src/core/: SYSTEM_PROMPT.md  agent_tools.py  dependencies.py  models.py  personas.py
src/core/auth/: router.py
src/core/tests/: test_storage.py
src/features/auth/: router.py
src/features/chat/: SYSTEM_PROMPT.md  constants.py  models.py  personas.py  registry.py  router.py  tools.py
src/features/physiology/: enrichment.py
src/features/scout/: assessment.py
src/features/strava/: auth.py  parser.py  router.py  streams.py  weather.py
src/features/webhook/: models.py  router.py
src/shared/: dependencies.py
static/: index.html
tests/: test_backfill.py  test_main.py  test_physiology.py  test_scout.py  test_storage.py  test_streams.py
tests/features/strava/: test_weather.py  (+1 more)
tests/shared/: test_storage.py
(+17 files in other folders)
